# NL2Robot-Mapping

./: LICENSE  LLM.py  README.md  classify.py  prompt_to_tasks.py  pyproject.toml
camera_calibration/: calibrate.py
object detection/: collect_scene_images.py  object_detector.py  open_ai_object_detector.py  retrain.py  split_dataset.py  training_results.txt  training_results_wrench.txt
object detection/LS_export/: result.json
object detection/exported_model/: float_ckpt.index
object detection/hammer_test/: labels.json
object detection/hammer_train/: labels.json
object detection/hammer_val/: labels.json
object detection/test/: labels.json
object detection/train/: labels.json
object detection/training images/: credits.txt.txt
object detection/training_images_raw/: credits.txt.txt
object detection/val/: labels.json
training images/: credits.txt.txt  load_zoo_dataset.py
