[tool.poetry]
name = "nl2robot-mapping"
version = "0.1.0"
description = "Master thesis"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyrealsense2 = "^2.55.1.6486"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
ur-rtde = "^1.5.7"
mediapipe = "^0.10.14"
openai = "1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
